// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct card correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "elevation": 4,
        "paddingHorizontal": 15,
        "paddingVertical": 20,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2.62,
      },
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "borderColor": "#32CB82",
        "borderWidth": 2.5,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#32CB82",
          "fontSize": 117,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#343D58",
          "fontWeight": "bold",
        },
        Object {
          "color": "#171717",
          "marginTop": 15,
        },
        Object {
          "fontSize": 35,
        },
      ]
    }
  >
    Test correct
  </Text>
</View>
`;

exports[`renders incorrect card correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "elevation": 4,
        "paddingHorizontal": 15,
        "paddingVertical": 20,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.23,
        "shadowRadius": 2.62,
      },
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "borderColor": "#FF6660",
        "borderWidth": 2.5,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#FF6660",
          "fontSize": 117,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#343D58",
          "fontWeight": "bold",
        },
        Object {
          "color": "#171717",
          "marginTop": 15,
        },
        Object {
          "fontSize": 35,
        },
      ]
    }
  >
    Test incorrect
  </Text>
</View>
`;
